# LegalMindAI

./: ._.env  ._app.py  .env  agents_rag.db  app.py  pyproject.toml  test.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/legalmindai/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/legalmindai/0/segments/3185ce5f-5722-49be-9ce3-9889d7bbc928/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000051
qdrant_storage/collections/legalmindai/0/segments/4456e1aa-cf2c-46c1-be22-00d316d0ee49/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000047
qdrant_storage/collections/legalmindai/0/segments/4a0e2434-b17e-4b81-8daa-92054f37aebd/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000047
qdrant_storage/collections/legalmindai/0/segments/6c0674d8-0b75-4c92-8d09-a403abd2899c/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000047
qdrant_storage/collections/legalmindai/0/segments/aa48998d-1b3e-4d78-b634-3da01cf2b6b3/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000051
qdrant_storage/collections/legalmindai/0/segments/d54f29de-190c-4af3-9a67-c04965fef723/: 000009.sst  000011.sst  000013.sst  000015.sst  000017.sst  000019.sst  IDENTITY  LOG  MANIFEST-000055
qdrant_storage/collections/legalmindai/0/segments/d6be371a-ef4d-48f4-8007-e34447840cdd/: 000009.sst  000011.sst  000013.sst  000015.sst  000017.sst  000019.sst  IDENTITY  LOG  MANIFEST-000055
qdrant_storage/collections/legalmindai/0/segments/da494c84-9b7e-46ea-aaba-05fb0639f11b/: 000009.sst  000011.sst  IDENTITY  LOG  (+1 more)
(+24 files in other folders)
