[project]
name = "legalmindai-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.1.4",
    "fastapi>=0.115.8",
    "groq>=0.18.0",
    "ollama>=0.4.7",
    "openai>=1.63.2",
    "pydantic>=2.10.6",
    "pypdf>=5.3.0",
    "qdrant-client>=1.13.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
